# weft-nebenkosten-B2B-rust

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  LICENSE  NOTICE  README.md  SETUP.md  docker-compose.yml
.github/workflows/: ci.yml  lint.yml
catalog/: test-project.weft
catalog/ai/generative/vllm/: backend.rs  frontend.ts
catalog/legal/betrkv-classifier/: backend.rs  frontend.ts
catalog/legal/compliance-checker/: backend.rs  frontend.ts
catalog/output/report-generator/: backend.rs  frontend.ts
catalog/triggers/jsonl-ingestion/: backend.rs  frontend.ts
docker/: weft.Dockerfile
docs/: CHANGELOG.md  P2-DEPLOYMENT.md  PERFORMANCE.md  RECHTSRAHMEN.md  schema.sql
operator-ui/: Dockerfile  package.json  svelte.config.js  vite.config.js
operator-ui/src/: app.html
operator-ui/src/lib/: api.ts
operator-ui/src/routes/: +page.svelte
rule-engine/: Cargo.toml
rule-engine/src/: betrkv.rs  co2_kostaufg.rs  fristen.rs  gewerbe.rs  heizkostenv.rs  lib.rs  plausibilitaet.rs
rule-engine/tests/: e2e_pipeline.rs  full_pipeline_test.rs
scripts/: patch-weft.sh  setup.sh  start.sh  test-pipeline.sh
sidecars/vllm-bridge/: Cargo.toml
sidecars/vllm-bridge/src/: main.rs
tests/expected/: test_gewerbe_2024_expected.json
tests/fixtures/: test_gewerbe_2024.jsonl
