[package]
name = "nkcheck-rule-engine"
version = "0.1.0"
edition = "2021"
description = "Deterministic compliance check engine for German utility bill regulations"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

[dev-dependencies]
rstest = "0.18"
