[package]
name = "nkcheck-vllm-bridge"
version = "0.1.0"
edition = "2021"
description = "Sidecar for vLLM integration with Weft infrastructure nodes"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
